# REITsExcelAuditor

./: .gitignore  README.md  README_EN.md  build_exe.ps1  pyproject.toml  requirements-ocr.txt  requirements.txt
.github/workflows/: ci.yml
config/: README.md  field_aliases.json  table_templates.json
examples/: README.md  metadata_template.xlsx
examples/annual_update_helper_templates/: README.md  年度更新_公告日期辅助表模板.xlsx  年度更新_基金净资产与折旧摊销参考表模板.xlsx  年度更新_标准导入表模板.xlsx  年度更新_残值参数辅助表模板.xlsx  年度更新_管理费率辅助表模板.xlsx  年度更新_统一补充大表模板.xlsx  年度更新_评估价值与资产性质辅助表模板.xlsx  年度更新_项目别名映射表模板.xlsx
reit_excel_auditor/: __init__.py  annual_update.py  app.py  transformer.py
scripts/: check_private_files.py  compare_annual_outputs.py  compare_ocr_extracted_content.py  rebuild_annual_update_templates.ps1  rebuild_annual_update_templates.py
standard_templates/: 01-基础资产估值标准模板.xlsx  04-产权经营数据标准模板.xlsx  05-能源经营数据标准模板.xlsx  TEMPLATE_NOTES.md
standard_templates/annual_update/: 产权年报提取模板.xlsx  未来现金流模板.xlsx  特许经营权年报提取模板.xlsx
standard_templates/excel_conversion/: 02-高速经营数据标准模板.xlsx  03-资产负债收入成本标准模板.xlsx
tests/: test_annual_update.py  test_repository_assets.py  test_transformer_core.py
